--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,9 @@
 # Site settings
+# permalink: /:categories/:year/:month/:day/:title
+markdown: kramdown
+exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+highlighter: pygments
+
 title: H3R3T1C Blog
 email: ldominguezvega@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -7,9 +12,6 @@ baseurl: "" # the subpath of your site, e.g. /blog/
 url: "https://lfdominguez.github.io/" # the base hostname & protocol for your site
 twitter_username: lfdominguez
 github_username:  lfdominguez
-
-# Build settings
-markdown: kramdown
 
 paginate: 5
 paginate_path: "/page:num/"
